Update transitions, fix z-index of border than prevented clicking text

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -1,19 +1,21 @@
+@import '../../node_modules/font-awesome/less/font-awesome';
+
 // variables
 
 @color_dark_grey: #333;
 @color_grey: #999;
 @color_paper: #e0d2bf;
+@color_paper_inverse: #4f4e49;
 
 @font_size_base: 50px;
 @font_color: @color_dark_grey;
-// @font_family_sans_serif: "Open Sans", helvetica, arial, sans-serif;
-@font_family_sans_serif: "Voltaire", helvetica, arial, sans-serif;
-@font_family_serif: Georgia, "Times New Roman", serif;
-@link_color: darkblue;
+@font_family_sans_serif: "Open Sans", helvetica, arial, sans-serif;
+// Similar fonts: Relay, Metromedium
+@font_family_fancy: "Voltaire", "Open Sans", helvetica, arial, sans-serif;
+@link_color: @color_dark_grey;
 
 @slide_width: 1200px;
 @slide_height: 900px;
-@slide_transition: all 0.3s ease;
 
 // base
 
@@ -42,7 +44,7 @@ article {
   }
 }
 .bespoke-slide {
-  transition: @slide_transition;
+  transition: opacity .3s ease;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -66,7 +68,7 @@ article {
     max-width: 100%;
   }
 }
-.bespoke-slide::after {
+.bespoke-slide:after {
   content: '';
   position: absolute;
   top: 80px;
@@ -74,16 +76,19 @@ article {
   bottom: 80px;
   left: 80px;
   border: 10px solid @color_dark_grey;
+  z-index: -1;
 }
-.no-border::after {
+.no-border:after {
   content: none;
 }
 .bespoke-inactive {
   opacity: 0;
   pointer-events: none;
+  transition: none;
 }
 .bespoke-active {
   opacity: 1;
+  transition-delay: .2s
 }
 
 // bespoke-state styles
@@ -102,7 +107,7 @@ article {
 // bespoke-bullet styles
 
 .bespoke-bullet {
-  transition: all 0.3s ease; 
+  transition: opacity .3s ease; 
 }
 .bespoke-bullet-inactive {
   opacity: 0;
@@ -114,7 +119,6 @@ article {
 // bespoke-progress styles
 
 .bespoke-progress-parent {
-  transition: @slide_transition; 
   position: absolute;
   top: 0;
   left: 0;
@@ -131,7 +135,6 @@ article {
 // bespoke-backdrop styles
 
 .bespoke-backdrop {
-  transition: @slide_transition; 
   position: absolute;
   top: 0;
   left: 0;
@@ -140,7 +143,6 @@ article {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  /*box-shadow: inset 0 0 300px rgba(0,0,0,0.5);*/
   z-index: -1;
 
   &.fade.bespoke-backdrop-active {
@@ -200,23 +202,25 @@ body {
   font-weight: 300;
   font-size: @font_size_base;
   color: @font_color;
+}
+h1, h2, h3, h4, h5, ul, ol {
+  font-family: @font_family_fancy;
+}
+h1, h2, h3, h4, h5 {
   text-transform: uppercase;
 }
-
 h1 {
   font-size: (@font_size_base * 2.8);
   font-weight: 600;
   letter-spacing: -2px;
   margin-bottom: (@font_size_base * 0.8);
 }
-
 h2 {
   font-weight: 300;
   font-size: (@font_size_base * 2.1);
   letter-spacing: -1px;
   margin-bottom: (@font_size_base * 0.8);
 }
-
 h3 {
   font-size: (@font_size_base * 1.6);
   font-weight: 300;
@@ -224,6 +228,16 @@ h3 {
 }
 h3 + ul, h3 + ol {
   margin-top: @font_size_base;
+}
+h4 {
+  font-size: (@font_size_base * 1.2);
+  font-weight: 300;
+  margin-bottom: (@font_size_base * 0.4);
+}
+h5{
+  font-size: @font_size_base;
+  font-weight: 300;
+  margin-bottom: (@font_size_base * 0.4);
 }
 hr {
   visibility: hidden;
@@ -236,6 +250,7 @@ li {
   margin-bottom: (@font_size_base * 0.2);
 }
 p {
+  font-family: @font_family_sans_serif;
   margin: 0 100px (@font_size_base * 0.6);
   line-height: (@font_size_base * 1.1);
 }
@@ -265,7 +280,7 @@ b {
   font-style: italic;
   .quote-marks {
     font-size: (@font_size_base * 3);
-    font-family: @font_family_serif;
+    // font-family: @font_family_serif;
     color: @color_grey;
     line-height: 0.1em;
     vertical-align: -0.4em;
@@ -310,8 +325,10 @@ b {
 .lower {
   text-transform: lowercase;
 }
+.no-transform {
+  text-transform: none;
+}
 .strikeout {
-  text-transform: lowercase;
   font-size: 0.7em;
 
   span {
@@ -411,4 +428,27 @@ b {
   color: @color_grey;
   font-size: 1.5em;
   margin-bottom: 0.5em;
+}
+.fa-stack {
+  margin-bottom: 1em;
+}
+.fa-inverse {
+  color: @color_paper;
+}
+.invert .fa-inverse {
+  color: @color_paper_inverse;
+}
+.chapter-number {
+  .fa-stack;
+  font-weight: bold;
+
+  &:before {
+    content: @fa-var-circle;
+    .fa;
+    .fa-stack-2x;
+  }
+  span {
+    .fa-stack-1x;
+    &:extend(.invert .fa-inverse);
+  }
 }
